Add OpenAL to build script

--- a/.settings/org.eclipse.jdt.core.prefs
+++ b/.settings/org.eclipse.jdt.core.prefs
@@ -1,5 +1,5 @@
 #
-#Thu Feb 18 13:06:20 EST 2021
+#Wed Apr 07 22:48:40 EDT 2021
 org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.8
 org.eclipse.jdt.core.compiler.source=1.8
