--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ switch (OperatingSystem.current()) {
 dependencies {
     implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
     
+    // LWJGL libraries, including PNG decoder and joml
     implementation "org.lwjgl:lwjgl"
     implementation "org.lwjgl:lwjgl-glfw"
     implementation "org.lwjgl:lwjgl-opengl"
@@ -58,4 +59,9 @@ dependencies {
     runtimeOnly "org.lwjgl:lwjgl-openal::$lwjglNatives"
     implementation "org.joml:joml:${jomlVersion}"
     implementation "org.l33tlabs.twl:pngdecoder:1.0"
+    
+    // log4j and its dependencies
+    implementation "org.apache.logging.log4j:log4j-api:2.14.1"
+    implementation "org.apache.logging.log4j:log4j-core:2.14.1"
+    implementation "org.fusesource.jansi:jansi:2.3.2"
 }
